--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "link_pinterest",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Pinterest LINK Cartridge",
-  "license":"Apache-2.0",
+  "license": "Apache-2.0",
   "main": "index.js",
   "engines": {
     "node": ">=4.0"
   },
   "scripts": {
     "upload": "sgmf-scripts --upload -- ",
-    "uploadCartridge": "sgmf-scripts --uploadCartridge int_pinterest_sfra && sgmf-scripts --uploadCartridge bm_pinterest"
+    "uploadCartridge": "sgmf-scripts --uploadCartridge int_pinterest_sfra && sgmf-scripts --uploadCartridge bm_pinterest",
+    "lint": "sgmf-scripts --lint js "
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-plugin-es5": "^1.5.0",
+    "eslint-plugin-import": "^2.28.0",
     "sgmf-scripts": "^2.4.2"
   },
   "browserslist": [
