--- a/cartridges/bm_pinterest/cartridge/templates/resources/pinterestbm.properties
+++ b/cartridges/bm_pinterest/cartridge/templates/resources/pinterestbm.properties
@@ -3,6 +3,8 @@ title.managedomains=Manage Domain Verification
 title.callback=App Connection
 error.disconnectfailure=App disconnect failed, please review logs.
 error.callback=App connection errored, please review logs.
+error.callbackFailed=Account configuration callback failed.
+error.callbackUnexpectedData=Unexpected data returned from callback before parsing.
 error.domainverificationfailedkey=Domain verification site key retrieval failed, please review logs.
 error.domainverificationfailed=Domain verification linking failed, please review logs.
 error.missingdata=You are missing custom preference setup values for 'Pinterest App ID' and 'Pinterest Business User'. Please define those custom preferences and then return to this page to continue with setup.
