--- a/cartridges/int_pinterest_sfra/package.json
+++ b/cartridges/int_pinterest_sfra/package.json
@@ -1,5 +1,6 @@
 {
   "name": "int_pinterest_sfra",
-  "version": "0.1.3",
-  "hooks": "./hooks.json"
+  "version": "0.1.4",
+  "hooks": "./hooks.json",
+  "caches": "./caches.json"
 }
