--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "link_pinterest",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Pinterest LINK Cartridge",
   "license": "Apache-2.0",
   "main": "index.js",
@@ -10,7 +10,8 @@
   "scripts": {
     "upload": "sgmf-scripts --upload -- ",
     "uploadCartridge": "sgmf-scripts --uploadCartridge int_pinterest_sfra && sgmf-scripts --uploadCartridge bm_pinterest",
-    "lint": "sgmf-scripts --lint js "
+    "lint": "sgmf-scripts --lint js ",
+    "lintCI": "eslint $(git diff --name-only master...)"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
